# romea-core-mobile-base

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_mobile_base.repos  romea_mobile_base_public.repos  romea_odo.rosinstall
cmake/: romea_core_mobile_baseConfig.cmake.in  romea_core_odoConfig.cmake.in  romea_odoConfig.cmake.in
include/romea_core_mobile_base/hardware/: HardwareControl1FAS2FWD.hpp  HardwareControl1FAS2RWD.hpp  HardwareControl1FAS4WD.hpp  HardwareControl1FWS2RWD.hpp  HardwareControl2AS2FWD.hpp  HardwareControl2AS2RWD.hpp  HardwareControl2AS4WD.hpp  HardwareControl2FWS2FWD.hpp  HardwareControl2FWS2RWD.hpp  HardwareControl2FWS4WD.hpp  HardwareControl2TD.hpp  HardwareControl2WD.hpp  HardwareControl4WD.hpp  HardwareControl4WS4WD.hpp  HardwareControlCommon.hpp
include/romea_core_mobile_base/info/: MobileBaseControl.hpp  MobileBaseGeometry.hpp  MobileBaseInertia.hpp  MobileBaseInfo1FAS2FWD.hpp  MobileBaseInfo1FAS2RWD.hpp  MobileBaseInfo1FAS4WD.hpp  MobileBaseInfo1FWS2RWD.hpp  MobileBaseInfo2AS2FWD.hpp  MobileBaseInfo2AS2RWD.hpp  MobileBaseInfo2AS4WD.hpp  MobileBaseInfo2FWS2FWD.hpp  MobileBaseInfo2FWS2RWD.hpp  MobileBaseInfo2FWS4WD.hpp  MobileBaseInfo2TD.hpp  MobileBaseInfo2THD.hpp  MobileBaseInfo2WD.hpp  MobileBaseInfo4WD.hpp  MobileBaseInfo4WS4WD.hpp  MobileBaseType.hpp
include/romea_core_mobile_base/kinematic/: CommandLimits.hpp  KinematicMeasure.hpp
include/romea_core_mobile_base/odometry/: OdometryFrame1FAS2FWD.hpp  OdometryFrame1FAS2RWD.hpp  OdometryFrame1FAS4WD.hpp  OdometryFrame1FWS2RWD.hpp  OdometryFrame2AS2FWD.hpp  OdometryFrame2AS2RWD.hpp  OdometryFrame2AS4WD.hpp  OdometryFrame2FWS2FWD.hpp  OdometryFrame2FWS2RWD.hpp  OdometryFrame2FWS4WD.hpp  OdometryFrame2TD.hpp  OdometryFrame2WD.hpp  OdometryFrame4WD.hpp  OdometryFrame4WS4WD.hpp
include/romea_core_mobile_base/simulation/: SimulationControl1FAS2FWD.hpp  SimulationControl1FAS2RWD.hpp  SimulationControl1FAS4WD.hpp  SimulationControl1FASxxx.hpp  SimulationControl1FWS2RWD.hpp  SimulationControl2AS2FWD.hpp  SimulationControl2AS2RWD.hpp  SimulationControl2AS4WD.hpp  SimulationControl2ASxxx.hpp  SimulationControl2FWS2FWD.hpp  SimulationControl2FWS2RWD.hpp  SimulationControl2FWS4WD.hpp  SimulationControl2FWSxxx.hpp  SimulationControl2TD.hpp  SimulationControl2THD.hpp  SimulationControl2TTD.hpp  SimulationControl2WD.hpp  SimulationControl4WD.hpp  SimulationControl4WS4WD.hpp
include/romea_core_odo/kinematic/: KinematicMeasure.hpp
include/romea_core_odo/odometry/: OdometryFrame4WD.hpp
include/romea_odo/odometry/: OdometryFrame.hpp  OdometryFrame1FAS2FWD.hpp  OdometryFrame1FAS2RWD.hpp  OdometryFrame1FWS2RWD.hpp  OdometryFrame2AS4WD.hpp  OdometryFrame2FWS2FWD.hpp  OdometryFrame2FWS2RWD.hpp  OdometryFrame2FWS4WD.hpp  OdometryFrame2WD.hpp  OdometryFrame4WD.hpp  OdometryFrame4WS4WD.hpp
src/hardware/: HardwareControl1FAS2FWD.cpp  HardwareControl1FAS2RWD.cpp  HardwareControl1FAS4WD.cpp  HardwareControl1FWS2RWD.cpp  HardwareControl2AS2FWD.cpp  HardwareControl2AS2RWD.cpp  HardwareControl2AS4WD.cpp  HardwareControl2FWS2FWD.cpp  HardwareControl2FWS2RWD.cpp  HardwareControl2FWS4WD.cpp  HardwareControl2TD.cpp  HardwareControl2WD.cpp  HardwareControl4WD.cpp  HardwareControl4WS4WD.cpp  HardwareControlCommon.cpp
src/info/: MobileBaseControl.cpp  MobileBaseGeometry.cpp  MobileBaseInertia.cpp  MobileBaseInfo1FAS2FWD.cpp  MobileBaseInfo1FAS2RWD.cpp  MobileBaseInfo1FAS4WD.cpp  MobileBaseInfo1FWS2RWD.cpp  MobileBaseInfo2AS2FWD.cpp  MobileBaseInfo2AS2RWD.cpp  MobileBaseInfo2AS4WD.cpp  MobileBaseInfo2FWS2FWD.cpp  MobileBaseInfo2FWS2RWD.cpp  MobileBaseInfo2FWS4WD.cpp  MobileBaseInfo2TD.cpp  MobileBaseInfo2THD.cpp  MobileBaseInfo2WD.cpp  MobileBaseInfo4WD.cpp  MobileBaseInfo4WS4WD.cpp  MobileBaseType.cpp
src/kinematic/: CommandLimits.cpp  KinematicMeasure.cpp
src/kinematic/axle_steering/: FowardOneAxleSteeringKinematic.cpp  FowardTwoAxleSteeringKinematic.cpp  InverseOneAxleSteeringKinematic.cpp  InverseTwoAxleSteeringKinematic.cpp  OneAxleSteeringCommand.cpp  OneAxleSteeringCommandLimits.cpp  OneAxleSteeringConstraints.cpp  OneAxleSteeringKinematic.cpp  OneAxleSteeringMeasure.cpp  TwoAxleSteeringCommand.cpp  TwoAxleSteeringCommandLimits.cpp  TwoAxleSteeringConstraints.cpp  TwoAxleSteeringKinematic.cpp  (+1 more)
src/odometry/: OdometryFrame.cpp  OdometryFrame1FAS2FWD.cpp  OdometryFrame1FAS2RWD.cpp  OdometryFrame1FAS4WD.cpp  OdometryFrame1FWS2RWD.cpp  OdometryFrame2AS2FWD.cpp  OdometryFrame2AS2RWD.cpp  OdometryFrame2AS4WD.cpp  OdometryFrame2FWS2FWD.cpp  OdometryFrame2FWS2RWD.cpp  OdometryFrame2FWS4WD.cpp  OdometryFrame2TD.cpp  OdometryFrame2WD.cpp  OdometryFrame4WD.cpp  OdometryFrame4WS4WD.cpp
src/simulation/: SimulationControl1FAS2FWD.cpp  SimulationControl1FAS2RWD.cpp  SimulationControl1FAS4WD.cpp  SimulationControl1FASxxx.cpp  SimulationControl1FWS2RWD.cpp  SimulationControl2AS2FWD.cpp  SimulationControl2AS2RWD.cpp  SimulationControl2AS4WD.cpp  SimulationControl2FWS2FWD.cpp  SimulationControl2FWS2RWD.cpp  SimulationControl2TD.cpp  SimulationControl2THD.cpp  SimulationControl2TTD.cpp
test/: CMakeLists.txt  test_1AS2FWD.cpp  test_1AS2RWD.cpp  test_1as.cpp  test_2AS4WD.cpp  test_2FWS2FWD.cpp  test_2FWS2RWD.cpp  test_2FWS4WD.cpp  test_2WD.cpp  test_2as.cpp  test_2ws.cpp  test_4WS4WD.cpp  test_4ws.cpp  test_frame.cpp  test_ss.cpp  test_utils.hpp
test/info/: test_mobile_base_type.cpp
test/kinematic/: test_command_limits.cpp  test_kinematic_1AS2FWD.cpp  test_kinematic_1AS2RWD.cpp  test_kinematic_1FAS2FWD.cpp  test_kinematic_1FAS4WD.cpp  test_kinematic_2AS4WD.cpp  test_kinematic_2FWS2FWD.cpp  test_kinematic_2FWS2RWD.cpp  test_kinematic_2FWS4WD.cpp  test_kinematic_2WD.cpp  test_kinematic_4WS4WD.cpp  test_utils.hpp
test/simulation/: test_simulation_1AS2FWD.cpp  test_simulation_1AS2RWD.cpp  test_simulation_1AS4WD.cpp  test_simulation_1FAS2FWD.cpp  test_simulation_1FAS2RWD.cpp  test_simulation_1FAS4WD.cpp  test_simulation_1FWS2RWD.cpp  test_simulation_2AS4WD.cpp  test_simulation_2FWS2FWD.cpp  test_simulation_2FWS2RWD.cpp  test_simulation_2TD.cpp  test_simulation_2THD.cpp  test_simulation_2TTD.cpp
(+87 files in other folders)
